--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <!-- "meet the trainers" section -->
 <section>
-  <h2>Meet The Trainers</h2>
+  <h2>Meet The Trainer</h2>
 </section>
 
 <!-- "reach out" section -->
