--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
     </head>
     <body>
         <header>
-            <h1>Run Buddy</h1>
+            <h1>
+              <a href="/">Run Buddy</a>
+            </h1>
+            <nav>
+              <!-- Unordered list element-->
+              <ul>
+                <!-- List item Element-->
+                <li>
+                  <!--Anchor element-->
+                  <a href="#what-we-do">What We Do</a>
+                </li>
+                <li>
+                  <a href="#what-you-do">What You Do</a>
+                </li>
+                <li>
+                  <a href="#your-trainers">Your Trainers</a>
+                </li>
+                <li>
+                  <a href="#reach-out">Reach Out</a>
+                </li>
+              </ul>
+            </nav>
         </header>
         <!-- hero/jumbotron -->
 <section>
@@ -24,7 +45,7 @@
 
 <!-- "meet the trainers" section -->
 <section>
-  <h2>Meet The Trainer</h2>
+  <h2>Meet The Trainers</h2>
 </section>
 
 <!-- "reach out" section -->
