--- a/index.html
+++ b/index.html
@@ -143,6 +143,31 @@
 <!-- "reach out" section -->
 <section>
   <h2>Reach Out</h2>
+  <div class="contact-info"> 
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3330.7565084091066!2d-111.8030834854636!3d33.40351615908503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872ba88479cd8da1%3A0xe1daff978bec6a63!2s630%20S%20Spur%20Cir%2C%20Mesa%2C%20AZ%2085204!5e0!3m2!1sen!2sus!4v1615745354962!5m2!1sen!2sus" 
+    frameborder="0"
+    width="400" 
+    height="400" 
+    style="border:0;" 
+    allowfullscreen="" 
+    >
+  </iframe>
+  </div> 
+  <div>
+    <h3>Run Buddy</h3>
+    <p>
+      Any questions or concerns before signing up?
+      <br />
+      Let us know and we'll be happy to talk to you!
+    </p>
+    <addres>
+      55 Main Street <br />
+      Some Town, CA <br/>
+      12345 <br/>
+      P: 555.RUN.BUDZ (555-786-2839)<br/>
+      E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+    </addres>
+  </div>
 </section>
 
     </body>
