--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
         </header>
         <!-- hero/jumbotron -->
-<section class="hero">
+<section class="hero hero-secondary">
   <div class="hero-form">
     <h3>Get Started Today</h3>
     <p>Fill out this form and one of our trainers will schedule a consult</p>
@@ -172,7 +172,7 @@
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
         <div>
-          <a hre="#">Read Our Privacy Policy</a><br />
+          <a href="privacy-policy.html#privacy-policy">Read Our Privacy Policy</a><br />
           &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
